BB-113 add conflict error test
