# src/Generated/Model/Error.php
@@ -17,6 +17,12 @@ class Error
      */
     protected $message;
     /**
+     * 
+     *
+     * @var ErrorExtra
+     */
+    protected $extra;
+    /**
      * Code
      *
      * @return string
@@ -56,6 +62,27 @@ class Error
     public function setMessage(string $message) : self
     {
         $this->message = $message;
+        return $this;
+    }
+    /**
+     * 
+     *
+     * @return ErrorExtra
+     */
+    public function getExtra() : ErrorExtra
+    {
+        return $this->extra;
+    }
+    /**
+     * 
+     *
+     * @param ErrorExtra $extra
+     *
+     * @return self
+     */
+    public function setExtra(ErrorExtra $extra) : self
+    {
+        $this->extra = $extra;
         return $this;
     }
 }
